--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,9 @@
 <li>
-  <%= gravatar_for user, size: 50 %>
+  <% if user.picture.present? %>
+    <%= image_tag user.picture, size: 50 %>
+  <% else %>
+    <%= gravatar_for user, size: 50 %>
+  <% end %>
   <%= link_to user.name, user %>
   <% if current_user.admin? && !current_page?(user) %>
     | <%= link_to "delete", user, method: :delete,
